Thu Oct 23 21:12:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button actually works right now.

Thu Oct 23 21:09:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Made the groups in the buddy list bold.

Thu Oct 23 20:54:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added support for showing group numbers in the buddy list.

Thu Oct 23 20:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimMainWindow.h:
	* src/QGaimPrefsDialog.cpp:
	  - Modifying the buddy list prefs now actually updates the buddy list.

Thu Oct 23 20:30:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Shorten the number of visible lines in the text entry to 3.

Thu Oct 23 19:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - The Join Chat button should now work even when a node isn't
	    selected.

Thu Oct 23 19:31:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a pref name.

Thu Oct 23 19:30:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added buddy list prefs. Not all work yet.

Wed Oct 22 23:34:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - The accounts window's listview resizes a bit nicer on larger
	    resolutions now.

Wed Oct 22 22:58:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimMainWindow.cpp:
	  - Closing the window on a conversation no longer closes Gaim.

Wed Oct 22 22:45:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp: